Fix sidebar close squish effect

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -35,7 +35,7 @@
   top:0;
   right: 0;
   height: 100vh;
-  width: 0;
+  width: 40vw;
   background-color: var(--primary-colour);
   transition: all .5s;
   z-index: 2;
@@ -51,6 +51,6 @@
   margin-bottom: 1rem;
 }
 
-.asideOpen {
-  width: 40vw;
+.asideClose {
+  transform: translateX(40vw);
 }
